View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032912 | Community | OCCT:Visualization | public | 2022-04-05 23:35 | 2022-04-10 10:49 |
Reporter | francois_lauzon | Assigned To | kgv | ||
Priority | normal | Severity | crash | ||
Status | verified | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2019 | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.2 | ||||
Summary | 0032912: Visualization - crash when displaying an OBJ file with missing texture file | ||||
Description | The application will crash if I import an OBJ file with missing texture file, no error or exception is raised, just a crash. | ||||
Steps To Reproduce | pload XDE VISUALIZATION OCAF ReadObj D "F-16D.obj" vinit View1 XDisplay D -dispMode 1 vfit Simple import the files using RWObj_CafReader. obj file: https://1drv.ms/u/s!AhCCWoYK5qdugpssNSHS7offA7hB3g?e=cPaCR8 mtl file: https://1drv.ms/u/s!AhCCWoYK5qdugpsoGjNAVLargCiR4g?e=E550Le | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Just a little precision, the application doesn't crash while importing, it is at the display stage when the pixmap is loaded but the file doesn't exist... I have attached an image of the callstack. callstack.png (113,866 bytes) |
|
f-16d.obj.7z (539,692 bytes) |
|
Branch CR32912 has been created by kgv. SHA-1: d3b04835af9d229cd515a7e4d7d618c0b51f3d11 Detailed log of new commits: Author: kgv Date: Wed Apr 6 01:26:00 2022 +0300 0032912: Visualization - crash when displaying an OBJ file with missing texture file Fix NULL dereference within Graphic3d_TextureRoot::convertToCompatible() due to wrong order of checks. |
|
Patch is ready for review - OCCT: branch CR32912. http://jenkins-test-occt/view/CR32912-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2022-04-08 master SHA - 7021de2fe7a69d4c788ccf43b8b096dbcc8597c8 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-04-08 SHA - e16d959d441765c483049307ba7293173532103a was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18452.87000000039 / 18490.94000000032 [-0.21%] Products Total CPU difference: 11761.310000000152 / 11719.920000000124 [+0.35%] Windows-64-VC14: OCCT Total CPU difference: 20539.828125 / 20552.71875 [-0.06%] Products Total CPU difference: 13248.21875 / 13242.609375 [+0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32912 has been deleted by mnt. SHA-1: d3b04835af9d229cd515a7e4d7d618c0b51f3d11 |
occt: master 5078d0d8 2022-04-06 01:26:00 Committer: smoskvin Details Diff |
0032912: Visualization - crash when displaying an OBJ file with missing texture file Fix NULL dereference within Graphic3d_TextureRoot::convertToCompatible() due to wrong order of checks. |
Affected Issues 0032912 |
|
mod - src/Graphic3d/Graphic3d_TextureRoot.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-04-05 23:35 | francois_lauzon | New Issue | |
2022-04-05 23:35 | francois_lauzon | Assigned To | => gka |
2022-04-06 00:16 | francois_lauzon | Note Added: 0107647 | |
2022-04-06 00:16 | francois_lauzon | File Added: callstack.png | |
2022-04-06 01:18 | kgv | Target Version | => 7.7.0 |
2022-04-06 01:21 | kgv | Note Added: 0107649 | |
2022-04-06 01:21 | kgv | File Added: f-16d.obj.7z | |
2022-04-06 01:23 | kgv | Steps to Reproduce Updated | |
2022-04-06 01:25 | kgv | Assigned To | gka => kgv |
2022-04-06 01:25 | kgv | Category | OCCT:Data Exchange => OCCT:Visualization |
2022-04-06 01:25 | kgv | Summary | Crash when importing an obj file with missing texture file => Visualization - crash when displaying an OBJ file with missing texture file |
2022-04-06 01:26 | git | Note Added: 0107650 | |
2022-04-06 02:13 | kgv | Relationship added | child of 0031478 |
2022-04-06 02:13 | kgv | Product Version | 7.6.0 => 7.5.0 |
2022-04-06 02:18 | kgv | Target Version | 7.7.0 => 7.6.2 |
2022-04-06 02:18 | kgv | Test case number | => N/A |
2022-04-06 08:28 | kgv | Assigned To | kgv => osa |
2022-04-06 08:28 | kgv | Status | new => resolved |
2022-04-06 08:28 | kgv | Note Added: 0107653 | |
2022-04-06 11:02 | osa | Assigned To | osa => bugmaster |
2022-04-06 11:02 | osa | Status | resolved => reviewed |
2022-04-06 11:02 | osa | Note Added: 0107658 | |
2022-04-09 09:50 | smoskvin | Status | reviewed => tested |
2022-04-09 09:50 | smoskvin | Note Added: 0107789 | |
2022-04-10 10:42 | smoskvin | Changeset attached | => occt master 5078d0d8 |
2022-04-10 10:42 | kgv | Assigned To | bugmaster => kgv |
2022-04-10 10:42 | kgv | Status | tested => verified |
2022-04-10 10:42 | kgv | Resolution | open => fixed |
2022-04-10 10:49 | git | Note Added: 0107824 |