0032912: Visualization - crash when displaying an OBJ file with missing texture file

Fix NULL dereference within Graphic3d_TextureRoot::convertToCompatible() due to wrong order of checks.